--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+
 
   <title>Nicole Tolch</title>
   <meta charset="UTF-8">
@@ -9,32 +12,40 @@
 
 <header>Nicole Tolch</header>
 
-<nav>
-  <ul>
-    <li> <a href="#">About</a> </li>
-    <li> <a href="#">Work</a> </li>
-    <li> <a href="#">Blog</a> </li>
-    <li> <a href="#">Contact</a> </li>
-  </ul>
-</nav>
+<section>
+  <a class="sm" href="https://twitter.com/NikiTolch">
+    <img class="sm" src="imgs/twitter-icon.png" alt="Twitter"/></a>
+  <a class="sm" href="https://www.facebook.com/NikiTolch">
+    <img class="sm" src="imgs/facebook-icon.png" alt="Facebook"/></a>
+  <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
+    <img class="sm" src="imgs/linkedin-icon.png" alt="LinkedIn"/></a>
+</section>
+
+  <nav>
+    <ul>
+      <li> <a href="#">About</a> </li>
+      <li> <a href="#">Work</a> </li>
+      <li> <a href="#">Blog</a> </li>
+      <li> <a href="#">Contact</a> </li>
+    </ul>
+  </nav>
+
+<section>
+  <img id="bio-pic" src="https://photos-5.dropbox.com/t/2/AABP0aG9X-kTYpmrkAuDQG9fIXXcKYKpu7WvLoLIeCrUBQ/12/79484293/jpeg/32x32/1/_/1/2/AboutMe%20pic.jpeg/ELiy4D0YqDkgAigC/epmnbOxgF9DeXHD4iPI5cGgw6l59tpuJSwKhax2m7Hs?size=800x600&size_mode=2" />
+</section>
 
 <main>
-  <h1>Post Title</h1>
-  <h4>July 19, 2015</h4>
 
   <section>
-    <h2>SECTION HEADING</h2>
-    <p>
-
-    </p>
-    <p>
-
-    </p>
-    <p>
-
-    </p>
-
-
+    <div> <h2>Short Bio</h2> </div>
+    <div> <h2>Blogs</h2>
+      <ul>
+        <li> <p> <a href="http://ntolch.github.io/blog/t1-git-blog.html">Note To Self: Commit</a> </p> </li>
+        <li> <p> <a href="http://ntolch.github.io/blog/c1-chefs-kitchen.html">Should I Stay or Should I Go?</a> </p> </li>
+      </ul>
+    </div>
+    <div> <h2>Projects</h2> </div>
+    <div> <h2>Contact Me</h2> </div>
   </section>
 </main>
 
