--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <ul>
       <li> <a href="#">About</a> </li>
       <li> <a href="#">Work</a> </li>
-      <li> <a href="#">Blog</a> </li>
+      <li> <a href="http://ntolch.github.io/blog-index.html#">Blog</a> </li>
       <li> <a href="#">Contact</a> </li>
     </ul>
   </nav>
