--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <ul>
         <li> <p> <a href="http://ntolch.github.io/blog/t1-git-blog.html">Note To Self: Commit</a> </p> </li>
         <li> <p> <a href="http://ntolch.github.io/blog/c1-chefs-kitchen.html">Should I Stay or Should I Go?</a> </p> </li>
+        <li> <p> <a href="http://ntolch.github.io/blog/c3-thinking-style.html">I Think I Can...</a></p></li>
+        <li> <p> <a href="http://ntolch.github.io/blog/t3-arrays-hashes.html">AH-HA!</a></p></li>
       </ul>
     </div>
     <div> <h2>Projects</h2> </div>
