--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li> <a href="#">About</a> </li>
       <li> <a href="#">Work</a> </li>
       <li> <a href="http://ntolch.github.io/blog-index.html#">Blog</a> </li>
-      <li> <a href="#">Contact</a> </li>
+      <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
     </ul>
   </nav>
 
