--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<head>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
 
+
+  <title>Nicole Tolch</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="default.css">
+</head>
+
+<header>Nicole Tolch</header>
+<h2>Contact Me</h2>
+
+<section>
+  <a class="sm" href="https://twitter.com/NikiTolch">
+    <img class="sm" src="imgs/twitter-icon.png" alt="Twitter"/></a>
+  <a class="sm" href="https://www.facebook.com/NikiTolch">
+    <img class="sm" src="imgs/facebook-icon.png" alt="Facebook"/></a>
+  <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
+    <img class="sm" src="imgs/linkedin-icon.png" alt="LinkedIn"/></a>
+</section>
+
+  <nav>
+    <ul>
+      <li> <a href="#">About</a> </li>
+      <li> <a href="#">Work</a> </li>
+      <li> <a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
+      <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
+    </ul>
+  </nav>
+
+
+<main>
+
+  <section>
+    <div> <h1> <a href="mailto:ntolch@gmail.com?Subject=Hello%There"Say hello!</a> </h1> </div>
+    
+  </section>
+</main>
