--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
 </head>
 
 <header>Nicole Tolch</header>
-<h2>Contact Me</h2>
 
 <section>
   <a class="sm" href="https://twitter.com/NikiTolch">
@@ -35,7 +34,7 @@
 <main>
 
   <section>
-    <div> <h1> <a href="mailto:ntolch@gmail.com?Subject=Hello%There"Say hello!</a> </h1> </div>
+    <div> <h1> <a href="mailto:ntolch@gmail.com?Subject=Hello%There">Say hello!</a> </h1> </div>
     
   </section>
 </main>
