--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 <main>
 
   <section>
-    <div> <h1> <a href="mailto:ntolch@gmail.com?Subject=Hello%There">Say hello!</a> </h1> </div>
-    
+    <h1> <a href="mailto:ntolch@gmail.com?Subject=Hello%There">Say hello!</a> </h1>
+    <p>Hi!</p>
   </section>
 </main>
