Update href to blog CSS

--- a/blog-template.html
+++ b/blog-template.html
@@ -3,7 +3,7 @@
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
- <link rel="stylesheet" type="text/css" href="../default.css">
+ <link rel="stylesheet" type="text/css" href="default-blog.css">
 
   <title>Nicole Tolch</title>
   <meta charset="UTF-8">
