--- a/index.html
+++ b/index.html
@@ -41,9 +41,23 @@
     <div> <h2>Blogs</h2>
       <ul>
         <li> <p> <a href="http://ntolch.github.io/blog/t1-git-blog.html">Note To Self: Commit</a> </p> </li>
+
         <li> <p> <a href="http://ntolch.github.io/blog/c1-chefs-kitchen.html">Should I Stay or Should I Go?</a> </p> </li>
+
         <li> <p> <a href="http://ntolch.github.io/blog/c3-thinking-style.html">I Think I Can...</a></p></li>
+
         <li> <p> <a href="http://ntolch.github.io/blog/t3-arrays-hashes.html">AH-HA!</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/c4-tech-issues.html">Where Are All The Cool People?</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/t4-enumerable-methods.html">Group</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/c5-feedback.html">I Appreciate Your Feedback...</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/t5-ruby-classes.html">Harry Potter and the Magical Class</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/c6-stereotype-threat.html">Should I Feel Threatened?</a></p></li>
+
       </ul>
     </div>
     <div> <h2>Projects</h2> </div>
