--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
         <li> <p> <a href="http://ntolch.github.io/blog/t5-ruby-classes.html">Harry Potter and the Magical Class</a></p></li>
 
+        <li> <p> <a href="http://ntolch.github.io/blog/t6-oop-concepts.html">Scoping Unicorns</a></p></li>
+
         <li> <p> <a href="http://ntolch.github.io/blog/c6-stereotype-threat.html">Should I Feel Threatened?</a></p></li>
 
       </ul>
