Add newest blogs to index

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 
         <li> <p> <a href="http://ntolch.github.io/blog/c6-stereotype-threat.html">Should I Feel Threatened?</a></p></li>
 
+        <li> <p> <a href="http://ntolch.github.io/blog/t7-JavaScript.html">Objects vs Hashes</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/c7-values.html">Values</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/t8-tech.html">What's Your Function?</a></p></li>
+
+        <li> <p> <a href="http://ntolch.github.io/blog/c8-conflict.html">Is There A Problem Here?</a></p></li>
+
       </ul>
     </div>
     <div> <h2>Projects</h2> </div>
