--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
 
 
   <title>Nicole Tolch</title>
@@ -10,18 +14,16 @@
   <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 
-<header>Nicole Tolch</header>
-
-<section>
-  <a class="sm" href="https://twitter.com/NikiTolch">
-    <img class="sm" src="imgs/twitter-icon.png" alt="Twitter"/></a>
-  <a class="sm" href="https://www.facebook.com/NikiTolch">
-    <img class="sm" src="imgs/facebook-icon.png" alt="Facebook"/></a>
-  <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
-    <img class="sm" src="imgs/linkedin-icon.png" alt="LinkedIn"/></a>
-</section>
-
   <nav>
+    <section>
+      <a class="sm" href="https://twitter.com/NikiTolch">
+        <img class="sm" src="imgs/twitter-icon.png" alt="Twitter"/></a>
+      <a class="sm" href="https://www.facebook.com/NikiTolch">
+        <img class="sm" src="imgs/facebook-icon.png" alt="Facebook"/></a>
+      <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
+        <img class="sm" src="imgs/linkedin-icon.png" alt="LinkedIn"/></a>
+    </section>
+
     <ul>
       <li> <a href="#">About</a> </li>
       <li> <a href="#">Work</a> </li>
@@ -30,48 +32,20 @@
     </ul>
   </nav>
 
+<header>Nicole Tolch</header>
+
 <section>
-  <img id="bio-pic" src="https://photos-5.dropbox.com/t/2/AABP0aG9X-kTYpmrkAuDQG9fIXXcKYKpu7WvLoLIeCrUBQ/12/79484293/jpeg/32x32/1/_/1/2/AboutMe%20pic.jpeg/ELiy4D0YqDkgAigC/epmnbOxgF9DeXHD4iPI5cGgw6l59tpuJSwKhax2m7Hs?size=800x600&size_mode=2" />
+
+<!--   <img id="bio-pic" src="imgs/AboutMe-pic.jpeg" />
+ -->
 </section>
 
 <main>
 
-  <section>
+<!--   <section>
     <div> <h2>Short Bio</h2> </div>
-    <div> <h2>Blogs</h2>
-      <ul>
-        <li> <p> <a href="http://ntolch.github.io/blog/t1-git-blog.html">Note To Self: Commit</a> </p> </li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c1-chefs-kitchen.html">Should I Stay or Should I Go?</a> </p> </li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c3-thinking-style.html">I Think I Can...</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/t3-arrays-hashes.html">AH-HA!</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c4-tech-issues.html">Where Are All The Cool People?</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/t4-enumerable-methods.html">Group</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c5-feedback.html">I Appreciate Your Feedback...</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/t5-ruby-classes.html">Harry Potter and the Magical Class</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/t6-oop-concepts.html">Scoping Unicorns</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c6-stereotype-threat.html">Should I Feel Threatened?</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/t7-JavaScript.html">Objects vs Hashes</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c7-values.html">Values</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/t8-tech.html">What's Your Function?</a></p></li>
-
-        <li> <p> <a href="http://ntolch.github.io/blog/c8-conflict.html">Is There A Problem Here?</a></p></li>
-
-      </ul>
-    </div>
     <div> <h2>Projects</h2> </div>
     <div> <h2>Contact Me</h2> </div>
-  </section>
+  </section> -->
 </main>
 
