Update css and blog/index

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <nav>
     <section>
       <a class="sm" href="https://twitter.com/NikiTolch">
-        <img class="sm" src="imgs/twitter-icon.png" alt="Twitter"/></a>
+        <img class="sm" src="imgs/twitter-square-white@2x.png" alt="Twitter"/></a>
       <a class="sm" href="https://www.facebook.com/NikiTolch">
-        <img class="sm" src="imgs/facebook-icon.png" alt="Facebook"/></a>
+        <img class="sm" src="imgs/facebook-square-white@2x.png" alt="Facebook"/></a>
       <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
-        <img class="sm" src="imgs/linkedin-icon.png" alt="LinkedIn"/></a>
+        <img class="sm" src="imgs/linkedin-square-white@2x.png" alt="LinkedIn"/></a>
     </section>
 
     <ul>
