Comment out P0 blogs, add name to navbar

--- a/about.html
+++ b/about.html
@@ -25,33 +25,21 @@
     </section>
 
     <ul>
-      <li id="name"><a href="/">Nicole Tolch</a></li>
-      <li><a href="http://ntolch.github.io/about.html">About</a> </li>
-      <li><a href="/">Work</a> </li>
-      <li><a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
-      <li><a href="http://ntolch.github.io/contact.html">Contact</a> </li>
+      <li> <a href="http://ntolch.github.io/about.html">About</a> </li>
+      <li> <a href="/">Work</a> </li>
+      <li> <a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
+      <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
     </ul>
   </nav>
 
-<!-- <header>Nicole Tolch</header>
- -->
+<header>Nicole Tolch</header>
+
 <section>
 
-<!--   <img id="bio-pic" src="imgs/AboutMe-pic.jpeg" />
- -->
+
 </section>
 
 <main>
-  <div class="quote">
-    <p id="quote-first-line">"It's easy to make a buck.</p>
-    <p id="quote-second-line">It's a lot tougher to make a difference."</p>
-    <p>  - Tom Brokaw</p>
-  </div>
 
-<!--   <section>
-    <div> <h2>Short Bio</h2> </div>
-    <div> <h2>Projects</h2> </div>
-    <div> <h2>Contact Me</h2> </div>
-  </section> -->
 </main>
 
