--- a/blog-index.html
+++ b/blog-index.html
@@ -33,6 +33,7 @@
     <div id="blogs"> <h2>Blogs</h2>
       <ul>
 
+        <li><p><a href="http://ntolch.github.io/blog/sometimes_im_upset.html">Sometimes I get upset.</a></p></li>
 
         <!-- <li> <p> <a href="http://ntolch.github.io/blog/t1-git-blog.html">Note To Self: Commit</a> </p> </li> -->
 
