--- a/about.html
+++ b/about.html
@@ -25,8 +25,9 @@
     </section>
 
     <ul>
+      <li id="name"><a href="/">Nicole Tolch</a></li>
       <li> <a href="http://ntolch.github.io/about.html">About</a> </li>
-      <li> <a href="/">Work</a> </li>
+      <li> <a href="http://ntolch.github.io/work.html">My Work</a> </li>
       <li> <a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
       <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
     </ul>
