Add WhereYouAt app to portfolio; update css

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,21 +33,20 @@
     </ul>
   </nav>
 
-<!-- <header>Nicole Tolch</header>
- -->
-<section>
-
-<!--   <img id="bio-pic" src="imgs/AboutMe-pic.jpeg" />
- -->
-</section>
 
 <main>
-  <div class="quote">
-    <p id="quote-first-line">"It's easy to make a buck.</p>
-    <p id="quote-second-line">It's a lot tougher to make a difference."</p>
-    <p>  - Tom Brokaw</p>
-  </div>
+  <section>
+    <div class="pic-right"> </div>
+  </section>
 
+
+    <div id="page-title"> <h2>Portfolio</h2>
+      <ul>
+        <li><p><a href="https://github.com/mrbeal15/Where_You_At-Xcode"><span class="portfolio-item-name">Where You At</a> -</span></p>
+          <p><span class="portfolio-description">An iOS app which allows you to join groups with other users so you can see where all your friends are on a map at any given time while you're out on the town or at a concert. With 7 days to complete it, this app uses the following technologies: Ruby, Rails, Swift, xCode, AlamoFire, SwiftyJSON and Heroku.</span></p></li>
+
+
+      </ul>
+    </div>
 
 </main>
-
