Small fix on portfolio index

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,10 @@
         <li><p><a href="https://github.com/mrbeal15/Where_You_At-Xcode"><span class="portfolio-item-name">Where You At</a> -</span></p>
           <p><span class="portfolio-description">An iOS app which allows you to join groups with other users so you can see where all your friends are on a map at any given time while you're out on the town or at a concert. With 7 days to complete it, this app uses the following technologies: Ruby, Rails, Swift, xCode, AlamoFire, SwiftyJSON and Heroku.</span></p></li>
 
+        <li><p><span class="portfolio-item-name">Stardust Reviews -</span></p>
+          <p><span class="portfolio-description"><a href="https://github.com/mrbeal15/Stardust-Reviews">See the code</a></span></p>
+          <p><span class="portfolio-description">A movie review site.</span></p></li>
+
 
       </ul>
     </div>
