Add stardust and wya screenshots, update all navs, remove background pic

--- a/about.html
+++ b/about.html
@@ -26,15 +26,15 @@
 
     <ul>
       <li id="name"><a href="/">Nicole Tolch</a></li>
-      <li> <a href="http://ntolch.github.io/about.html">About</a> </li>
-      <li> <a href="http://ntolch.github.io/work.html">My Work</a> </li>
-      <li> <a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
-      <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
+      <li><a href="http://ntolch.github.io/about.html">About</a></li>
+      <li><a href="http://ntolch.github.io/portfolio.html">Work</a></li>
+      <li><a href="http://ntolch.github.io/blog-index.html">Blog</a></li>
+      <li><a href="http://ntolch.github.io/contact.html">Contact</a></li>
     </ul>
   </nav>
 
-<header>Nicole Tolch</header>
-
+<!-- <header>Nicole Tolch</header>
+ -->
 <section>
 
 
