--- a/blog-index.html
+++ b/blog-index.html
@@ -8,32 +8,41 @@
   <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
 
+
   <title>Nicole Tolch</title>
   <meta charset="UTF-8">
-
- <link rel="stylesheet" type="text/css" href="default.css">
+  <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 
+  <nav>
+    <section>
+      <a class="sm" href="https://twitter.com/NikiTolch">
+        <img class="sm" src="imgs/twitter-square-white@2x.png" alt="Twitter"/></a>
+      <a class="sm" href="https://www.facebook.com/NikiTolch">
+        <img class="sm" src="imgs/facebook-square-white@2x.png" alt="Facebook"/></a>
+      <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
+        <img class="sm" src="imgs/linkedin-square-white@2x.png" alt="LinkedIn"/></a>
+    </section>
 
-<nav>
-  <ul>
-      <li> <a href="#">About</a> </li>
-      <li> <a href="#">Work</a> </li>
-      <li> <a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
-      <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
-  </ul>
-</nav>
+    <ul>
+      <li id="name"><a href="/">Nicole Tolch</a></li>
+      <li><a href="http://ntolch.github.io/about.html">About</a></li>
+      <li><a href="http://ntolch.github.io/portfolio.html">Work</a></li>
+      <li><a href="http://ntolch.github.io/blog-index.html">Blog</a></li>
+      <li><a href="http://ntolch.github.io/contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
 <main>
   <section>
     <div class="pic-right"> </div>
   </section>
 
-
-    <div id="blogs"> <h2>Blogs</h2>
+    <h1>Check back at some future date that is close by.</h1>
+<!--     <div id="blogs"> <h2>Blogs</h2>
       <ul>
 
-        <li><p><a href="http://ntolch.github.io/blog/sometimes_im_upset.html">Sometimes I get upset.</a></p></li>
+        <li><p><a href="http://ntolch.github.io/blog/sometimes_im_upset.html">Sometimes I get upset.</a></p></li> -->
 
         <!-- <li> <p> <a href="http://ntolch.github.io/blog/t1-git-blog.html">Note To Self: Commit</a> </p> </li> -->
 
