--- a/blog-template.html
+++ b/blog-template.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
- <link rel="stylesheet" type="text/css" href="default-blog.css">
+
 
   <title>Nicole Tolch</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 
-<header>Nicole Tolch</header>
+  <nav>
+    <section>
+      <a class="sm" href="https://twitter.com/NikiTolch">
+        <img class="sm" src="imgs/twitter-square-white@2x.png" alt="Twitter"/></a>
+      <a class="sm" href="https://www.facebook.com/NikiTolch">
+        <img class="sm" src="imgs/facebook-square-white@2x.png" alt="Facebook"/></a>
+      <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
+        <img class="sm" src="imgs/linkedin-square-white@2x.png" alt="LinkedIn"/></a>
+    </section>
 
-<nav>
-  <ul>
-    <li> <a href="#">About</a> </li>
-    <li> <a href="#">Work</a> </li>
-    <li> <a href="#">Blog</a> </li>
-    <li> <a href="#">Contact</a> </li>
-  </ul>
-</nav>
+    <ul>
+      <li id="name"><a href="/">Nicole Tolch</a></li>
+      <li><a href="http://ntolch.github.io/about.html">About</a></li>
+      <li><a href="http://ntolch.github.io/portfolio.html">Work</a></li>
+      <li><a href="http://ntolch.github.io/blog-index.html">Blog</a></li>
+      <li><a href="http://ntolch.github.io/contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
 <main>
   <h1>BLOG TITLE</h1>
