--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
 
 
   <title>Nicole Tolch</title>
@@ -10,30 +14,32 @@
   <link rel="stylesheet" type="text/css" href="default.css">
 </head>
 
-<header>Nicole Tolch</header>
-
-<section>
-  <a class="sm" href="https://twitter.com/NikiTolch">
-    <img class="sm" src="imgs/twitter-icon.png" alt="Twitter"/></a>
-  <a class="sm" href="https://www.facebook.com/NikiTolch">
-    <img class="sm" src="imgs/facebook-icon.png" alt="Facebook"/></a>
-  <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
-    <img class="sm" src="imgs/linkedin-icon.png" alt="LinkedIn"/></a>
-</section>
-
   <nav>
+    <section>
+      <a class="sm" href="https://twitter.com/NikiTolch">
+        <img class="sm" src="imgs/twitter-square-white@2x.png" alt="Twitter"/></a>
+      <a class="sm" href="https://www.facebook.com/NikiTolch">
+        <img class="sm" src="imgs/facebook-square-white@2x.png" alt="Facebook"/></a>
+      <a class="sm" href="https://www.linkedin.com/in/NicoleTolch">
+        <img class="sm" src="imgs/linkedin-square-white@2x.png" alt="LinkedIn"/></a>
+    </section>
+
     <ul>
-      <li> <a href="#">About</a> </li>
-      <li> <a href="#">Work</a> </li>
-      <li> <a href="http://ntolch.github.io/blog-index.html">Blog</a> </li>
-      <li> <a href="http://ntolch.github.io/contact.html">Contact</a> </li>
+      <li id="name"><a href="/">Nicole Tolch</a></li>
+      <li><a href="http://ntolch.github.io/about.html">About</a></li>
+      <li><a href="http://ntolch.github.io/portfolio.html">Work</a></li>
+      <li><a href="http://ntolch.github.io/blog-index.html">Blog</a></li>
+      <li><a href="http://ntolch.github.io/contact.html">Contact</a></li>
     </ul>
   </nav>
 
 
 <main>
 
-  <section>
-    <h1> <a href="mailto:ntolch@gmail.com?Subject=Hello%There">Say hello!</a> </h1>
+  <section class="contact-methods">
+    <p> Drop an email: <a href="mailto:ntolch@gmail.com?Subject=Hello%There">ntolch@gmail.com </a></p>
+    <p> Catch a tweet: <a href="https://twitter.com/NikiTolch">@NikiTolch </a></p>
+    <p> Connect professionally: <a href="https://www.linkedin.com/in/NicoleTolch">LinkedIn </a></p>
+    <p> Be my friend! Maybe after we get to know other a little first, though. (See above ways to get in touch.)</p>
   </section>
 </main>
