--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,30 @@
 
     <div id="page-title"> <h2>Portfolio</h2>
       <ul>
-        <li><p><a href="https://github.com/mrbeal15/Where_You_At-Xcode"><span class="portfolio-item-name">Where You At</a> -</span></p>
-          <p><span class="portfolio-description">An iOS app which allows you to join groups with other users so you can see where all your friends are on a map at any given time while you're out on the town or at a concert. With 7 days to complete it, this app uses the following technologies: Ruby, Rails, Swift, xCode, AlamoFire, SwiftyJSON and Heroku.</span></p></li>
+        <li><p><span class="portfolio-item-name">Where You At -</span></p>
+          <p><span class="portfolio-description">
+            An iOS app which allows you to join groups with other users so you can see where all your friends are on a map at any given time while you're out on the town or at a concert. With 7 days to complete it, this app uses the following technologies: Ruby, Rails, Swift, xCode, AlamoFire, SwiftyJSON and Heroku.
+
+            <div>
+              <img class="wya" src="imgs/wya/wya-login.png"
+            </div>
+
+            <p>See the code:<a href="https://github.com/mrbeal15/Where_You_At-Xcode">Front-End</a> &<a href="https://github.com/mrbeal15/Where_You_At">Back-End</a></p>
+          </span></p></li>
 
         <li><p><span class="portfolio-item-name">Stardust Reviews -</span></p>
-          <p><span class="portfolio-description"><a href="https://github.com/mrbeal15/Stardust-Reviews">See the code</a></span></p>
-          <p><span class="portfolio-description">A movie review site.</span></p></li>
+          <p><span class="portfolio-description">A movie review site.
 
+            <div class="stardust">
+              <img class="stardust" id="stardust-home" src="imgs/stardust/stardust-home.png">
+              <img class="stardust" id="stardust-signin" src="imgs/stardust/stardust-login.png">
+              <img class="stardust" id="stardust-signin" src="imgs/stardust/stardust-signup.png">
+              <img class="stardust" id="stardust-movies" src="imgs/stardust/stardust-movies.png">
+              <img class="stardust" id="stardust-movies" src="imgs/stardust/stardust-movie-page.png">
+            </div>
+
+            <p>See the code<a href="https://github.com/mrbeal15/Stardust-Reviews">here</a>.</p>
+          </span></p></li>
 
       </ul>
     </div>
