Update Stardust description

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
           </span></p></li>
 
         <li><p><span class="portfolio-item-name">Stardust Reviews -</span></p>
-          <p><span class="portfolio-description">A movie review site.
+          <p><span class="portfolio-description">A movie review site featuring a bunch of the awesome Leonardo DiCaprio's films.
 
             <div class="stardust">
               <img class="stardust" id="stardust-home" src="imgs/stardust/stardust-home.png">
