Update 'under construction' css

--- a/blog-index.html
+++ b/blog-index.html
@@ -38,7 +38,7 @@
     <div class="pic-right"> </div>
   </section>
 
-    <h1>Check back at some future date that is close by.</h1>
+    <h1 class="construction">Check back at some future date that is close by.</h1>
 <!--     <div id="blogs"> <h2>Blogs</h2>
       <ul>
 
