Add construction msg to about

--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
     </ul>
   </nav>
 
-<!-- <header>Nicole Tolch</header>
- -->
-<section>
-
+<!-- <header>Nicole Tolch</header> -->
+<section class="construction">
+  For now, let's call this page "under construction." Because there are no three special words that define me. And my story is longer than 30 seconds. It's gonna take a while to fill you in, and I'm not sure I want to do it all on this screen, anyway.
+  <p> For some insight into some of the things I think about, you can check out <a href="https://twitter.com/NikiTolch">my Twitter feed</a>.</p>
 
 </section>
 
